app/assets/stylesheets/dealhunter.css
/* ... */
/* slider details --------------------------- */

.slider-wrapper {
    /*	padding:20px;
    */
}

.theme-default .nivo-controlNav {
    padding: 0 !important;
}

.nivo-controlNav {
    padding: 0 0 15px 0 !important;
    margin-bottom: 20px;
}

/* hr --------------------------- */

#page-detail #main-content hr {
    margin: 20px 0 0;
}

#page-detail #main-content2 hr {
    margin: 20px 0 0;
}

/*-----------------------------------------------------------------------------------*/
/*	footer
/*-----------------------------------------------------------------------------------*/

#footer-wrapper {
    background: #FFF;
    margin-top: 4%;
    font-size: 12px;
    color: #595e61;
    box-shadow: none;
    border-top-style: solid;
    border-top-color: mediumaquamarine;

}

#footer-wrapper .container {
    padding: 2%;
}

#footer-wrapper .bg {
    background-color: #CCC;
}

#footer-top {
    padding-top: 20px;
}

#footer-bottom {
    background-color: #f4f4f4;
    margin-top: 20px;
    padding: 20px 0;
}

#footer-middle nav ul {
    margin: 0px !important;
}

#footer-middle nav li {
    border-right: 1px solid #F7F6F4;

}

#footer-middle nav li a {
    color: #595e61;
}

#footer-middle nav li a:hover {
    color: mediumaquamarine; /* red */
}

#footer-middle nav li:first-child {
    padding-left: 0px;
}

#footer-middle nav li:last-child {
    border-right: 0px;
}

#footer-logo {
    max-width: 175px;
    height: auto;
}

#custumer-support {
    color: #595e61;
}

.custumer-support-title {
    font-weight: bold;
    color: mediumaquamarine; /* red */
}

.telephone-number {
    font-family: 'Open Sans', sans-serif;
    font-size: 18px;
}

.contact-mail a {
    color: #595e61;
}

.icon-contact-mail {
    background: url(../assets/icon-mail.png) no-repeat top center;
}

.social li {
    padding: 0 2px !important;
}

.copyright {
    margin: 0px !important;
}

.mercado-pago {
    margin-top: 20px;
    font-size: 11px;
}

#landing footer #container {
    min-height: 100%;
    position: relative;
}

#landing footer {
    position: absolute;
    bottom: 0;
    width: 100%;
}

/* Tabbed menu --------------------------- */

ul#myTab {
    background-color: white;
    padding: 20px 10px 0px 10px;
}

#myTabContent {
    padding: 0 10px;
}

.nav-tabs > li {
    width: 25%; /*4 tabs*/
    text-align: center;
    font-family: 'Open Sans', sans-serif;
    font-size: 11px;
    font-weight: 700;
    text-transform: uppercase;
    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.2);

}

#page-detail .nav-tabs > li {
    width: 33.3333% !important; /*3 tabs*/
}

.nav-tabs > li > a {
    border-radius: 0px;
    color: #fff;
    background-color: #C1BEB6;
}

.nav > li > a:hover,
.nav > li > a:focus {
    text-decoration: none;
    background-color: #aeaca7;
}

.nav-tabs > .active > a,
.nav-tabs > .active > a:hover,
.nav-tabs > .active > a:focus {
    color: mediumaquamarine; /* red */
    border-top: 4px solid mediumaquamarine;
    margin-top: -3px;
    text-shadow: none;

}

/* Hotel list and details --------------------------- */

.hotel-item {
    padding: 0px 0 10px 0;
    border-bottom: 1px solid #f7f6f4;
    z-index: 999;
}

.hotel-item-thumb {
    float: left;
    overflow: hidden;
}

.hotel-item p {
    margin: 0px;
}

.hotel-item h4 a {
    font-weight: 400;
    color: #333;
}

.hotel-item h4 a:hover {
    color: mediumaquamarine; /* red */
    text-decoration: none;
}

.hotel-item h5 {
    font-weight: normal;
    color: #888888;
    margin: 5px 0;
}

ul.hotel-item-description {
    margin: 0 0 0 130px !important;
    padding: 0px;
}

ul.hotel-item-description h4 {
    margin: 0 !important;
}

ul.hotel-item-description h4 a {
    color: #333;
}

ul.hotel-item-description h4 a:hover {
    color: mediumaquamarine;
    text-decoration: none;
}

/* counter --------------------------- */

.counter {
    font-family: 'Open Sans', sans-serif;
    background: mediumaquamarine url(../assets/bg-triangle-red.jpg) repeat-x bottom left;
}

.clock-wrapper {
    background: #fff;
    margin: 10px 10px 15px 10px;
    overflow: hidden;
}

.clock-info {
    width: 280px;
    height: 41px;
}

.twitter-button{
    background: url(../assets/twitter.png) no-repeat no-repeat;
    height: 32px;
    width: 32px;
}

.blueTitle{
color:rgb(23, 46, 117);
    font-size: 12px;
}

.clock-title {
    background: #899fac url(../assets/triangle-corner-grey.png) no-repeat center right;
    width: 35%;

    padding: 10px 0 10px 10px;
    font-weight: 700;
    font-size: 11px;
    text-transform: uppercase;
    color: #fff;
    height: 21px;
}

.clock-numbers {
    background: #fff;
    width: 60%;

}

.clock-numbers ul {
    margin: 5px 0 0 0;
    padding: 0px;
}

.clock-numbers ul li {
    width: auto;
    padding: 0 !important;
    text-align: center;
    font-size: 20px;
    margin: 0 5px 0px 0px;
}

.clock-numbers ul li span {
    font-size: 11px;
    text-transform: uppercase;
    color: #888;
}

/* accordion --------------------------- */

.offer-number {
    text-transform: uppercase;
    font-size: 11px;
    color: #899fac;
    font-weight: bold;
}

.offer-title {
    display: block;
    float: left;
    width: 68%;
}

.offer-title h3 a {
    color: #333;
    font-family: 'Open Sans', sans-serif;
    text-decoration: none;
}

.offer-price-box {
    display: block;
    float: left;
    background-color: mediumaquamarine; /* red */
    color: #333;
    width: 30%;
    text-align: center;
    padding: 0px !important;
    margin: 0px !important;
}

.offer-price-box .offer-disccount {
    font-size: 22px;
    margin: 5px 2px;
    color: #FFF;
}

.offer-price-box .offer-price {
    font-size: 18px;
    color: mediumaquamarine; /* red */
    background-color: #FFF;
    display: block;
    margin: 5px 8%;
}

.accordion h3,
.toggle h3 {
    padding: 8px 5px 10px 5px;
    margin: 0;
    line-height: 18px;
    cursor: pointer;
    position: relative;
    font-weight: 400;
    text-transform: none;
}
/* ... */

